# scap-python-template-test

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  example_bad_code.py  pyproject.toml
.github/config/: release-drafter.yml
.github/workflows/: generic-docker-workflow.yml  lfs-warning.yml  lint.yml  release-drafter.yml
docs/: index.md  installation.md  usage.md
reports/: ruff-report.json
src/iot_dss_user_profile_synchronizer/: __init__.py  cli.py
tests/: __init__.py  test_iot_dss_user_profile_synchronizer.py
