[project]
name = "iot-dss-user-profile-synchronizer"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
authors = [
  {name = "Yufeng Kao", email = "yufengkao@gorilla-technology.com"}
]
maintainers = [
  {name = "Yufeng Kao", email = "yufengkao@gorilla-technology.com"}
]
classifiers = [

]
license = {text = "Proprietary"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]

[project.urls]
bugs = "https://github.com/gorilla-ai/gorilla-ai/iot-dss-user-profile-synchronizer/issues"
changelog = "https://github.com/gorilla-ai/gorilla-ai/iot-dss-user-profile-synchronizer/blob/master/changelog.md"
homepage = "https://github.com/gorilla-ai/gorilla-ai/iot-dss-user-profile-synchronizer"

[project.scripts]
iot_dss_user_profile_synchronizer = "iot_dss_user_profile_synchronizer.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

# Optional: Per-directory overrides for flexibility in boilerplates with tests or examples.
[[tool.ty.overrides]]
match = ["tests/**.py"]
rules.TY016 = "ignore"  # Ignore invalid-assignment in tests, e.g., for dynamic fixtures.
rules.TY029 = "ignore"  # Ignore invalid-return-type in tests.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
